--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Broadway Design</h1>
     <nav>
-      <p><a href="#home">Home</a></p>
+      <p><a href="#">Home</a></p>
       <p><a href="#about">About</a></p>
       <p><a href="#work">Work</a></p>
       <p><a href="#team">Team</a></p>
@@ -30,7 +30,7 @@
     </p>
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
-    <h3 id="">Designed in New York</h3>
+    <h3>Designed in New York</h3>
     <h3>Portfolio</h3>
     <p>Coming Soon</p>
     <h3>Team</h3>
@@ -38,13 +38,13 @@
     <p>Contact</p>
     <p>
       Phone: (555)-555-5555
-      <br>
+      <br><br>
       Email: test@example.com
-      <br>
+      <br><br>
       Twitter: @test
     </p>
-    <div id="footer">
-      <p>© Braodway 2016 <a href="#home">Home</a> <a href="#about">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></p>
+    <div class="footer">
+      <p>© Broadway 2017 <a href="#">Home</a> <a href="#about">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></p>
     </div>
   </body>
 </html>
