--- a/index.html
+++ b/index.html
@@ -6,43 +6,55 @@
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
-    <h1>Broadway Design</h1>
-    <nav>
-      <p><a href="#">Home</a></p>
-      <p><a href="#about">About</a></p>
-      <p><a href="#work">Work</a></p>
-      <p><a href="#team">Team</a></p>
-      <p><a href="#contact">Contact</a></p>
-    </nav>
-    <h2>Our Process</h2>
-    <p>
-      <img src="./resources/images/identify.svg" alt="Identify">
-    </p>
-    <h3>Identify</h3>
-    <p>We focus on the most important details.</p>
-    <p>
-      <img src="./resources/images/understand.svg" alt="Understand">
-    </p>
-    <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
-    <p>
-      <img src="./resources/images/execute.svg" alt="Execute">
-    </p>
-    <h3>Execute</h3>
-    <p>We put everything we have into our work.</p>
-    <h3>Designed in New York</h3>
-    <h3>Portfolio</h3>
-    <p>Coming Soon</p>
-    <h3>Team</h3>
-    <p>We're Hiring!</p>
-    <p>Contact</p>
-    <p>
-      Phone: (555)-555-5555
-      <br><br>
-      Email: test@example.com
-      <br><br>
-      Twitter: @test
-    </p>
+    <div class="bkg-needed">
+      <h1>Broadway Design</h1>
+      <nav>
+        <p><a href="#">Home</a></p>
+        <p><a href="#about">About</a></p>
+        <p><a href="#work">Work</a></p>
+        <p><a href="#team">Team</a></p>
+        <p><a href="#contact">Contact</a></p>
+      </nav>
+    </div>
+    <div>
+      <h2>Our Process</h2>
+      <p>
+        <img src="./resources/images/identify.svg" alt="Identify">
+      </p>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <p>
+        <img src="./resources/images/understand.svg" alt="Understand">
+      </p>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <p>
+        <img src="./resources/images/execute.svg" alt="Execute">
+      </p>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+    <div id="about" class="bkg-needed">
+      <h3>Designed in New York</h3>
+    </div>
+    <div id="work">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+    </div>
+    <div id="team">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
+    <div id="contact">
+      <p>Contact</p>
+      <p>
+        Phone: (555)-555-5555
+        <br><br>
+        Email: test@example.com
+        <br><br>
+        Twitter: @test
+      </p>
+    </div>
     <div class="footer">
       <p>© Broadway 2017 <a href="#">Home</a> <a href="#about">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></p>
     </div>
