Correct contact tag to h3 instead of p

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <p>We're Hiring!</p>
     </div>
     <div id="contact">
-      <p>Contact</p>
+      <h3>Contact</h3>
       <p>
         Phone: (555)-555-5555
         <br><br>
